<resources>
    <string name="app_name">GenkiShiken</string>
    <string name="title_activity_settings">Settings</string>
    <string name="results_text">%1$d out of %2$d.</string>
    <string name="prev_button_label">先</string>
    <string name="prev_key" translatable="false">prev</string>
    <string name="next_button_label">次</string>
    <string name="next_key" translatable="false">next</string>
    <string name="finish_button_label">終</string>
    <string name="restart_button_label">再</string>
    <string name="no_user_answer" translatable="false">no_user_answer</string>

    <!-- Strings related to UserPreferences -->
    <string name="pref_lesson_type_key" translatable="false">lesson_type_key</string>
    <string name="pref_lesson_type_kana" translatable="false">lesson_kana</string>
    <string name="pref_lesson_type_meaning" translatable="false">lesson_meaning</string>
    <string name="pref_lesson_type_reading" translatable="false">lesson_reading</string>
    <string name="question_meaning">Meaning</string>
    <string name="question_reading">Reading</string>

    <string name="pref_lesson_label">Lesson Number</string>
    <string name="pref_lesson_default" translatable="false">1</string>
    <string name="pref_lesson_key" translatable="false">lesson_key</string>

    <string name="pref_orientation_label">Screen Orientation</string>
    <string name="pref_orientation_default">@string/pref_orientation_value_no_pref</string>
    <string name="pref_orientation_key" translatable="false">orientation_key</string>
    <string name="pref_orientation_label_portrait">Portrait</string>
    <string name="pref_orientation_value_portrait" translatable="false">portrait</string>
    <string name="pref_orientation_label_landscape">Landscape</string>
    <string name="pref_orientation_value_landscape" translatable="false">landscape</string>
    <string name="pref_orientation_label_no_pref">No preference</string>
    <string name="pref_orientation_value_no_pref" translatable="false">no_preference</string>

    <!-- Strings for the toolbar menu -->
    <string name="action_reset">Reset board</string>
    <string name="action_settings">Settings</string>
</resources>
