<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_lesson_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_meaning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="false"
            android:text="@string/question_meaning"
            android:textSize="24sp"/>

        <RadioButton
            android:id="@+id/rb_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/question_reading"
            android:textSize="24sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/bt_prev"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next_prev"
        android:text="@string/prev_button_label"
        app:layout_constraintRight_toLeftOf="@+id/bt_next"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/bt_next"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/next_prev"
        android:text="@string/next_button_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/bt_finish"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/finish"
        android:text="@string/finish_button_label"
        app:layout_constraintLeft_toLeftOf="@+id/bt_prev"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_next"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_top_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"
        tools:layout_editor_absoluteY="169dp"
        tools:layout_editor_absoluteX="0dp"/>

    <include
        layout="@layout/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_fifth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top_third"/>

    <include
        layout="@layout/results_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_fifth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top_third"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_bottom_fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        tools:layout_editor_absoluteY="409dp"
        tools:layout_editor_absoluteX="0dp"/>

    <include
        layout="@layout/progress_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottom_fifth"/>

</android.support.constraint.ConstraintLayout>